clusters/openshift/apps/home/paperless-ngx/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless-ngx
  namespace: paperless-ngx
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway
    namespace: openshift-ingress
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: openshift-gateway-internal
    namespace: openshift-ingress
  hostnames:
  - paperless.vanillax.xyz
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - group: ''
      kind: Service
      name: paperless-ngx
      port: 8000
      weight: 1
